--- a/docs/套装.md
+++ b/docs/套装.md
@@ -11,6 +11,7 @@ name: "测试套装"
 decision:
   lore: "测试套装"
   type: "test"
+  regex: ".*?测试.*?套装.*"
 bonus:
   potion:
     2:
@@ -24,11 +25,34 @@ bonus:
       - "攻击力: 25"
       - "生命上限: 250"
       - "暴击几率: 1"
+lore:
+  name:
+    - "&l&6&m      ❀&e测试套装{n}/4&6❀&m      "
+  active:
+    2:
+      - "&a(2)套装: +10攻击力。"
+      - "&a(2)套装: +100生命力。"
+    4:
+      - "&a(4)套装: +25攻击力。"
+      - "&a(4)套装: +250生命力。"
+      - "&a(4)套装: +1%暴击几率。"
+      - "&l&6&m      ❀&e 套装信息 &6❀&m       "
+  inactive:
+    2:
+      - "&7(2)套装: +10攻击力。"
+      - "&7(2)套装: +100生命力。"
+    4:
+      - "&7(4)套装: +25攻击力。"
+      - "&7(4)套装: +250生命力。"
+      - "&7(4)套装: +1%暴击几率。"
+      - "&l&6&m      ❀&e 套装信息 &6❀&m       "
 ```
 
 `decision` 是配置 对应物品的判断方式，与装备相同， type需要使用命令/xes tag addSet来添加.
 
 `potion` 的药水效果仅支持原版。 在使用前请看看自己的版本是不是有这个玩意。 后面是等级 使用半角`:`分割。
+
+`lore` 是套装lore，装备在插件gui中会自动添加到末尾lore。
 
 `attribute` 在除了MMOItems之外填入对应属性文本即可。 MMOItems自带套装效果。不再添加。 如果你非得想添加一个，你可以填入MMOItems的物品对应插件内ID，套装效果即为获得该物品的属性。
 
