--- a/docs/最后.md
+++ b/docs/最后.md
@@ -6,6 +6,36 @@ sidebar_position: 7
 
 
 
+> **1.0.5**
+>
+> 修复了同时启用多个背包时，可能会导致部分背包物品丢失的bug.
+>
+> 优化打开背包逻辑，部分行为放在异步。 
+>
+> 修复在shift+左键自动装备时会触发的一个NPE。
+>
+> 添加正则表达式匹配 套装、装备类型 的选择。
+>
+> 在装备后，会额外以lore的形式显示套装效果，显示激活与未激活的状态与穿戴的数量，可在配置文件中配置。
+>
+> 
+>
+> 添加了一些API：获得玩家物品栏，注册并设置其他属性插件前置，获得已注册的物品栏、套装名等方法。
+>
+> 添加了几个事件：分别在玩家背包变更、插件更新玩家属性时、玩家打开背包页面时触发。
+>
+> 变更了机制，在玩家背包满时不再允许脱下装备。
+>
+> 支持点击非装备槽位时执行命令，可以快速切换不同的页面。
+>
+> 支持单个槽位检测权限，玩家无权限时无法操作。
+>
+> 
+>
+> 
+>
+> 23/10/4
+
 > **1.0.3**
 >
 > 添加了对MMOItems的支持，现在可以通过穿戴MMOItems的物品来获得对应的属性、技能、粒子特效，并适配MMOItems中检验物品的耐久与等级限制等穿戴限制。
