--- a/docs/配置装备栏.md
+++ b/docs/配置装备栏.md
@@ -33,6 +33,10 @@ sidebar_position: 4
 >
 > ​	`lore` 物品的lore 支持**占位符**
 >
+> ​	`command` 点击执行的指令
+>
+> ​	`permission` 设置使用本槽位的权限
+>
 > ​	**设置装备槽**
 >
 > ​	添加一个`equipmentSlot` 节点，即可把它设置为装备槽。 前面的物品会设置为无装备时显示的物品，有装备后会自动替换为穿戴的装备。
@@ -45,7 +49,7 @@ sidebar_position: 4
 >
 > ​		`lore`  使用lore作为判断依据,设置此项则也会对lore进行判断,只要lore中包含这个字符串就会成功,即使是 "一头盔甲" 。这两种方法有一种成功则可以穿戴。
 >
->
+> ​		`regex`  使用正则表达式匹配lore。
 >
 > 没了喵。我觉得比着葫芦画瓢应该能写出自己想要的配置吧！
 >
@@ -86,6 +90,12 @@ items:
     lore:
       - "&7别看了! 你还想把我拿走吗?"
       - "&4支持占位符！%Player_name%"
+    #点击执行命令 仅支持玩家身份执行命令, 支持占位符。
+    command:
+      - "xes openinv default"
+    #检查权限, 如果像这样写的话就会检测XgpEquipmentSlot.default.#
+    #如果没有权限则不可以操作、以及上方的执行命令。
+    permission: "#"
 
   #支持物品库 ItemsAdder/NeigeItem/MythicMobs
   "@":
